# azure-fic-fastapi-rest

./: init.sh  main.py  pyproject.toml
