[project]
name = "python-rest-azure-fic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.24.0",
    "azure-mgmt-msi>=7.1.0",
    "azure-mgmt-resource>=24.0.0",
    "fastapi[standard]>=0.116.1",
    "kubernetes>=33.1.0",
]
